fix(core): Associa produtos à categoria de nível 3 no seeder
Corrige um erro de 'ProductException: Categoria secundária não encontrada'
que ocorria ao buscar detalhes de produtos como MacBooks, iPads e
Apple Watches.

O problema era causado porque o DataSeeder associava esses produtos
a categorias genéricas de nível 2. A lógica da aplicação, no entanto,
espera que cada produto esteja associado a uma categoria mais específica
de nível 3.

Esta alteração atualiza o seeder para usar as categorias de nível 3
corretas, garantindo consistência com o modelo de dados e resolvendo
a exceção.